--- a/assets/css/RequestHelpForm.css
+++ b/assets/css/RequestHelpForm.css
@@ -1,14 +1,28 @@
+/* -----  With theme -----  */
+/* form {
+    padding-left: 700px;
+    padding-right: 700px;
+}
+label {
+    text-align: left;
+    padding-top: 15px; */
+
+/* -----  No theme -----  */
 html {
   padding-left: 400px;
   padding-right: 400px;
 }
+p {
+  text-align: center;
+}
 .request-help-form {
   margin-top: 50px;
+  margin-left: 300px;
   padding-top: 50px;
   padding-bottom: 50px;
-  padding-left: 400px;
-  padding-right: 400px;
-  max-width: 500px;
+  padding-left: 100px;
+  padding-right: 100px;
+  max-width: 700px;
   border: 2px solid black;
 }
 label {
